# whatsYourQuestion

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
auth/: urls.py  views.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  index.css  main.js
frontend/src/Pages/: Auth.vue  Detail.vue  Home.vue  Profile.vue  Question.vue
frontend/src/components/: Button.vue  Card.vue  CardProfile.vue  Header.vue  Input.vue  Link.vue  Modal.vue  Search.vue  Vote.vue
frontend/src/hooks/: use-router.js  useAxios.js
qaauth/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
qaauth/migrations/: 0001_initial.py  0002_auto_20200917_2040.py  0003_auto_20201005_1749.py  0004_auto_20201005_1828.py  0005_auto_20210817_1716.py
qaplatform/: admin.py  apps.py  form.py  models.py  urls.py  views.py
qaplatform/migrations/: 0001_initial.py  0002_auto_20200325_2030.py  0003_comment.py  0004_auto_20200802_1125.py  0005_auto_20200807_1658.py  0006_auto_20200815_1607.py  0007_auto_20201009_1811.py  0007_auto_20201014_1753.py  0008_auto_20201011_1826.py  0008_auto_20201014_1809.py  0009_auto_20201011_1834.py  0009_auto_20210817_1716.py  0010_auto_20201011_1835.py  0011_auto_20201012_0540.py
qarest/: apps.py  serializers.py  urls.py  views.py
qarest_auth/: apps.py  serializers.py  urls.py  views.py
static/: style.css
templates/: answer.html  base.html  form.html  header.html  list.html  login.html  profile.html  question.html  register.html  search.html
whatsYourQuestion/: asgi.py  settings.py  urls.py  wsgi.py
whatsyourquestion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+9 files in other folders)
