[tool.poetry]
name = "whatsyourquestion"
version = "0.1.0"
description = ""
authors = ["Ujwal <ujwal@symboinsurance.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
